tests/fixtures/invalid/max_bytes_none.py
# Cannot call max() with Bytes, None
x = max(b"hello", None)
